karl package Changelog
======================

Unreleased
----------

- Fixed bug which caused content feeds to break if an edited item was not
  contained by a community. (LP #670967)

- Add a peopledirectory report filter based on the 'is_staff' index.
  and configure it as an addable in a report.  (LP #669523)

- Make the jQuery UI dialog on Accept Invitation show an OK button
  that isn't misaligned.  We have some pretty horrible CSS styling
  going on where we have overridden <button> as a whole, rather than
  in targeted places.  We have a buttongeddon coming at some
  point. (LP #651279)

- The same code is used to guess mimetypes for files uploaded to the
  files tool is now used to guess mimetypes for files uploaded as
  attachments to other content types, ie blog entries, wiki pages, et
  al.  (LP #667494)

- Added an evolve script to update mimetypes for community files with
  generic, meaningless mimetypes to something more specific based on
  file extension.  (LP #667494)

- Attendees are now converted to to UTF-8 in the ical view for calendar events.
  (LP #666295)

3.49 (2010-11-02)
-----------------

- Harden 'deactivate_profile.html' view against missing user (LP #669451).

- Fix 'show_profile_view' for case when user has never logged in.  (LP
  #668352)

- Suppressed "Admin" action on peopledir objects (LP #668489).

- Added evolve script to clean up logins in user database.

- Make "external" action URL detection work for HTTPS URLs (LP #661381).

- Update feed code to read unicode from config file.  (LP #663403)

- Repaired busted HTML in template used to view profile.  (LP #668350)

3.48 (2010-10-28)
-----------------

- Improve descrption-extraction utility, avoiding a bug in older libxml2
  and making it more lazy (LP #663399).

- Made '/people' objects editable TTW by administrators.  See
  https://blueprints.launchpad.net/karl3/+spec/ttw-people-configuration

- Display last login time on main profile view, using relative time via