@@ -33,6 +33,9 @@ from karl.utilities.alerts import Alerts
 from karl.utilities.interfaces import IAlerts
 from zope.component import queryUtility
 
+import logging
+logging.basicConfig()
+
 def main():
     parser = optparse.OptionParser(
         description=__doc__,
