@@ -25,6 +25,9 @@ from optparse import OptionParser
 import re
 import transaction
 
+import logging
+logging.basicConfig()
+
 def main():
     parser = OptionParser(description=__doc__)
     parser.add_option('-C', '--config', dest='config', default=None,
